packages/typ/tests/fixtures/diagnostics/0362_optional_argument_call_mismatch_04.ml.infer.expected
File "0362_optional_argument_call_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0362_optional_argument_call_mismatch_04 is not a valid module name.

File "0362_optional_argument_call_mismatch_04.ml", line 3, characters 21-25:
3 | let _ = add_delta ~x:true 4
                         ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
